--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           tag_name: v${{ steps.release_props.outputs.MOD_VERSION }}
-          name: Cobalt ${{ steps.release_props.outputs.MOD_VERSION }}
+          name: Cobalt v${{ steps.release_props.outputs.MOD_VERSION }}
           files: build/libs/*.jar
           body: ${{ github.event.head_commit.message }}
         env:
