--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,9 @@ shouldRelease=false
 
 lwjglVersion=3.3.3
 
+essential.defaults.loom=1
+essential.defaults.loom.fabric-loader=net.fabricmc:fabric-loader:0.18.4
+
 # https://fabricmc.net/develop/
 minecraft_version=1.21.11
 loader_version=0.18.4
@@ -16,3 +19,5 @@ loom_version=1.15-SNAPSHOT
 # Dependency Versions
 fabric_api_version=0.141.2+1.21.11
 fabric_kotlin_version=1.13.8+kotlin.2.3.0
+
+loom.ignoreDependencyLoomVersionValidation=true
